modified the look of the website to match the rest of the theme

--- a/login.html
+++ b/login.html
@@ -5,29 +5,29 @@
     <title>Login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        body{ background-color: #c8c8c8; }
+        body{ background-color: #0c1023; }
         .content {max-width: 500px; margin: 400px; }
     </style>
 </head>
 <body>
     <div class="content">
-        <h2>Login</h2>
-        <p>Please fill in your credentials to login.</p>
+        <h2 style="color:white">Login</h2>
+        <p style="color:white">Please fill in your credentials to login.</p>
         <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>
             <div class="form-group">
-                <label>Username</label>
+                <label style="color:white">Username</label>
                 <input type="text" name="username" class="form-control <?php echo (!empty($username_err)) ? 'is-invalid' : ''; ?>" value="<?php echo $username; ?>">
                 <span class="invalid-feedback"></span>
             </div>    
             <div class="form-group">
-                <label>Password</label>
+                <label style="color:white">Password</label>
                 <input type="password" name="password" class="form-control <?php echo (!empty($password_err)) ? 'is-invalid' : ''; ?>">
                 <span class="invalid-feedback"></span>
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="Login">
+                <input type="submit" class="btn btn-warning" value="Login">
             </div>
-            <p>Don't have an account? <a href="register.php">Sign up now</a>.</p>
+            <p style="color:white">Don't have an account? <a href="register.php">Sign up now</a>.</p>
         </form>
     </div>
 </body>
