--- a/reset-password.html
+++ b/reset-password.html
@@ -5,27 +5,27 @@
     <title>Reset Password</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
-        body{ background-color: #c8c8c8; }
+        body{ background-color: #0c1023; }
         .content {max-width: 500px; margin: 400px; }
     </style>
 </head>
 <body>
     <div class="content">
-        <h2>Reset Password</h2>
-        <p>Please fill out this form to reset your password.</p>
+        <h2 style="color:white">Reset Password</h2>
+        <p style="color:white">Please fill out this form to reset your password.</p>
         <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>
             <div class="form-group">
-                <label>New Password</label>
+                <label style="color:white">New Password</label>
                 <input type="password" name="new_password" class="form-control <?php echo (!empty($new_password_err)) ? 'is-invalid' : ''; ?>" value="<?php echo $new_password; ?>">
                 <span class="invalid-feedback"></span>
             </div>
             <div class="form-group">
-                <label>Confirm Password</label>
+                <label style="color:white">Confirm Password</label>
                 <input type="password" name="confirm_password" class="form-control <?php echo (!empty($confirm_password_err)) ? 'is-invalid' : ''; ?>">
                 <span class="invalid-feedback"></span>
             </div>
             <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="Submit">
+                <input type="submit" class="btn btn-warning" value="Submit">
                 <a class="btn btn-link ml-2" href="welcome.php">Cancel</a>
             </div>
         </form>
