updated php files to reflect changes to html files

--- a/welcome.html
+++ b/welcome.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="content">
-        <h1 style="color:white" class="my-5">Hi, $_SESSION["username"]<b><?php echo htmlspecialchars($_SESSION["username"]); ?></b>. Welcome to our site.</h1>
+        <h1 style="color:white" class="my-5">Hi, <b><?php echo htmlspecialchars($_SESSION["username"]); ?></b>. Welcome to our site.</h1>
             <p>
                 <a href="reset-password.php" class="btn btn-warning">Reset Your Password</a>
                 <a href="logout.php" class="btn btn-danger ml-3">Sign Out of Your Account</a>
